--- a/Cyrusportfolio/package.json
+++ b/Cyrusportfolio/package.json
@@ -17,6 +17,7 @@
     "react-animated-cursor": "^2.11.2",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
+    "react-lazy-load-image-component": "^1.6.3",
     "react-on-screen": "^2.1.1",
     "react-router-dom": "^6.22.1"
   },
