--- a/Cyrusportfolio/package.json
+++ b/Cyrusportfolio/package.json
@@ -13,18 +13,27 @@
     "animate.css": "^4.1.1",
     "bootstrap": "^5.3.2",
     "boxicons": "^2.1.4",
+    "framer-motion": "^12.23.24",
+    "lucide-react": "^0.548.0",
     "react": "^18.2.0",
     "react-animated-cursor": "^2.11.2",
     "react-bootstrap": "^2.10.1",
+    "react-bootstrap-icons": "^1.11.6",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-lazy-load-image-component": "^1.6.3",
+    "react-mailchimp-subscribe": "^2.1.3",
+    "react-multi-carousel": "^2.8.6",
     "react-on-screen": "^2.1.1",
-    "react-router-dom": "^6.22.1"
+    "react-router-dom": "^6.22.1",
+    "react-router-hash-link": "^2.4.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
     "@types/react-lazy-load-image-component": "^1.6.4",
+    "@types/react-mailchimp-subscribe": "^2.1.4",
+    "@types/react-router-hash-link": "^2.4.9",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react": "^4.2.1",
