--- a/Cyrusportfolio/package.json
+++ b/Cyrusportfolio/package.json
@@ -13,6 +13,7 @@
     "animate.css": "^4.1.1",
     "bootstrap": "^5.3.2",
     "boxicons": "^2.1.4",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.548.0",
     "react": "^18.2.0",
